force-app/main/default/objects/CCX_OrderDetails__c/CCX_OrderDetails__c.object-meta.xml
<CustomObject>
    <label>CCX_OrderDetails</label>
    <nameField>
        <displayFormat>OD-{000}</displayFormat>
        <label>OrderDetailId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX_Orderdetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>