force-app/main/default/objects/CCX_OrderDetails__c/fields/CCX_Order__c.field-meta.xml
<CustomField>
    <fullName>CCX_Order__c</fullName>
    <label>CCX_Order</label>
    <referenceTo>CCX_Order__c</referenceTo>
    <relationshipLabel>CCX_Orderdetails</relationshipLabel>
    <relationshipName>CCX_Orderdetails</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>