force-app/main/default/objects/CCX_OrderDetails__c/fields/CCX_Product__c.field-meta.xml
<CustomField>
    <fullName>CCX_Product__c</fullName>
    <label>CCX_Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CCX_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Full Stock, Reorder, Available</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCX_Product__c</referenceTo>
    <relationshipLabel>CCX_Orderdetails</relationshipLabel>
    <relationshipName>CCX_Orderdetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>