force-app/main/default/objects/CCX_OrderDetails__c/fields/Ord_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Ord_Quantity__c</fullName>
    <label>Ord Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>