force-app/main/default/objects/CCX_OrderDetails__c/fields/OrderDetailTotal__c.field-meta.xml
<CustomField>
    <fullName>OrderDetailTotal__c</fullName>
    <formula>Ord_Quantity__c * Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderDetailTotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>