force-app/main/default/objects/CCX_OrderDetails__c/validationRules/Checking_quantity_is_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Checking_quantity_is_greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Ord_Quantity__c )</errorConditionFormula>
    <errorDisplayField>Ord_Quantity__c</errorDisplayField>
    <errorMessage>Quantity must not be less than 0</errorMessage>
</ValidationRule>