force-app/main/default/objects/CCX_OrderDetails__c/validationRules/Order_Quantity_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Quantity_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Ord_Quantity__c &gt; CCX_Product__r.CurrentQuantity__c</errorConditionFormula>
    <errorDisplayField>Ord_Quantity__c</errorDisplayField>
    <errorMessage>Order Quanity Should Not be greater than Current Quantity</errorMessage>
</ValidationRule>